kubernetes/infrastructure/configs/loki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  namespace: loki
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    lbipam.cilium.io/ips: "10.69.65.41"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - loki.lilstrudel.io
      secretName: loki-tls
  rules:
    - host: loki.lilstrudel.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki-gateway
                port:
                  number: 80
